// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalize config buildConfig is array, resolved is 1`] = `
Array [
  Object {
    "buildType": "bundleless",
    "bundlelessOptions": Object {
      "assets": Object {
        "path": "./",
      },
      "style": Object {
        "compileMode": "all",
        "path": "./",
      },
    },
    "copy": Array [],
    "dts": false,
    "entry": Array [
      "./src",
    ],
    "format": "cjs",
    "path": "./dist",
    "sourceMap": false,
    "target": "es5",
  },
  Object {
    "buildType": "bundleless",
    "bundlelessOptions": Object {
      "assets": Object {
        "path": "./",
      },
      "style": Object {
        "compileMode": "all",
        "path": "./",
      },
    },
    "copy": Array [],
    "dts": false,
    "entry": Array [
      "./src",
    ],
    "format": "cjs",
    "path": "./dist",
    "sourceMap": false,
    "target": "es5",
  },
]
`;

exports[`normalize config buildConfig is object, resolved is 1`] = `
Array [
  Object {
    "buildType": "bundleless",
    "bundlelessOptions": Object {
      "assets": Object {
        "path": "./",
      },
      "style": Object {
        "compileMode": "all",
        "path": "./",
      },
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "./types",
      "only": true,
      "tsconfigPath": "./tsconfig.json",
    },
    "entry": Array [
      "./src",
    ],
    "format": "cjs",
    "path": "./dist",
    "sourceMap": false,
    "target": "esnext",
  },
]
`;

exports[`normalize config buildConfig with buildPreset, resolved is 1`] = `
Array [
  Object {
    "buildType": "bundleless",
    "bundlelessOptions": Object {
      "assets": Object {
        "path": "./",
      },
      "style": Object {
        "compileMode": "all",
        "path": "./",
      },
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "../types",
    },
    "entry": Array [
      "./src",
    ],
    "format": "esm",
    "path": "./es",
    "sourceMap": false,
    "target": "es2015",
  },
]
`;

exports[`normalize config buildPreset function not return value 1`] = `undefined`;

exports[`normalize config buildPreset is string, resolved is 1`] = `
Array [
  Object {
    "buildType": "bundleless",
    "bundlelessOptions": Object {
      "assets": Object {
        "path": "./",
      },
      "style": Object {
        "compileMode": "all",
        "path": "./",
      },
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "../types",
    },
    "entry": Array [
      "./src",
    ],
    "format": "esm",
    "path": "./es",
    "sourceMap": false,
    "target": "es2015",
  },
  Object {
    "buildType": "bundleless",
    "bundlelessOptions": Object {
      "assets": Object {
        "path": "./",
      },
      "style": Object {
        "compileMode": "all",
        "path": "./",
      },
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "../types",
    },
    "entry": Array [
      "./src",
    ],
    "format": "esm",
    "path": "./es",
    "sourceMap": false,
    "target": "es2015",
  },
]
`;

exports[`normalize config buildPreset is string, resolved is 2`] = `
Array [
  Object {
    "buildType": "bundle",
    "bundleOptions": Object {
      "assets": undefined,
      "entryNames": "[name]",
      "externals": undefined,
      "getModuleId": [Function],
      "globals": Object {},
      "jsx": "automatic",
      "metafile": false,
      "minify": "esbuild",
      "platform": "node",
      "skipDeps": true,
      "splitting": false,
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "../types",
      "only": false,
      "tsconfigPath": "./tsconfig.json",
    },
    "entry": Array [
      "./src/index",
    ],
    "format": "umd",
    "path": "./umd",
    "sourceMap": false,
    "target": "es2016",
  },
  Object {
    "buildType": "bundle",
    "bundleOptions": Object {
      "assets": undefined,
      "entryNames": "[name]",
      "externals": undefined,
      "getModuleId": [Function],
      "globals": Object {},
      "jsx": "automatic",
      "metafile": false,
      "minify": "esbuild",
      "platform": "node",
      "skipDeps": true,
      "splitting": false,
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "../types",
      "only": false,
      "tsconfigPath": "./tsconfig.json",
    },
    "entry": Array [
      "./src/index",
    ],
    "format": "umd",
    "path": "./umd",
    "sourceMap": false,
    "target": "es2016",
  },
  Object {
    "buildType": "bundle",
    "bundleOptions": Object {
      "assets": undefined,
      "entryNames": "[name]",
      "externals": undefined,
      "getModuleId": [Function],
      "globals": Object {},
      "jsx": "automatic",
      "metafile": false,
      "minify": "esbuild",
      "platform": "node",
      "skipDeps": true,
      "splitting": false,
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "../types",
      "only": false,
      "tsconfigPath": "./tsconfig.json",
    },
    "entry": Array [
      "./src/index",
    ],
    "format": "umd",
    "path": "./umd",
    "sourceMap": false,
    "target": "es2016",
  },
]
`;

exports[`normalize config no buildConfig and buildPreset, resolved is 1`] = `
Array [
  Object {
    "buildType": "bundle",
    "bundleOptions": Object {
      "assets": undefined,
      "entryNames": "[name]",
      "externals": undefined,
      "getModuleId": [Function],
      "globals": Object {},
      "jsx": "automatic",
      "metafile": false,
      "minify": "esbuild",
      "platform": "node",
      "skipDeps": true,
      "splitting": false,
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "./types",
      "only": false,
      "tsconfigPath": "./tsconfig.json",
    },
    "entry": Array [
      "./src/index",
    ],
    "format": "esm",
    "path": "./es",
    "sourceMap": false,
    "target": "es6",
  },
  Object {
    "buildType": "bundle",
    "bundleOptions": Object {
      "assets": undefined,
      "entryNames": "[name]",
      "externals": undefined,
      "getModuleId": [Function],
      "globals": Object {},
      "jsx": "automatic",
      "metafile": false,
      "minify": "esbuild",
      "platform": "node",
      "skipDeps": true,
      "splitting": false,
    },
    "copy": Array [],
    "dts": Object {
      "distPath": "./types",
      "only": false,
      "tsconfigPath": "./tsconfig.json",
    },
    "entry": Array [
      "./src/index",
    ],
    "format": "esm",
    "path": "./es",
    "sourceMap": false,
    "target": "es6",
  },
]
`;
